<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Simos Tools</string>
    <!-- Strings used for nav -->
    <string name="nav_main">Main</string>
    <string name="nav_flashing">Flashing</string>
    <string name="nav_utilities">Utilities</string>
    <string name="nav_logging">Logging</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_color">Color</string>
    <string name="nav_log_viewer">Log Viewer</string>
    <string name="nav_log_viewer_enabled">Log Viewer Enabled</string>
    <string name="nav_log_viewer_tabs">Log Viewer Tabs</string>
    <string name="nav_cockpit">Cockpit</string>
    <!-- Strings used for tabs -->
    <string name="tab_tools">Tools</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_logging">Logging</string>
    <!-- Strings used for buttons -->
    <string name="switch_enable">Enable</string>
    <!-- Strings used for buttons -->
    <string name="button_arrow_left">«</string>
    <string name="button_arrow_right">»</string>
    <string name="button_arrow_up">↑</string>
    <string name="button_arrow_down">↓</string>
    <string name="button_log_viewer">Log Viewer</string>
    <string name="button_quick_view">Quick View</string>
    <string name="button_none">None</string>
    <string name="button_ok">Ok</string>
    <string name="button_set_pids">Set PIDS</string>
    <string name="button_set_tabs">Set Tabs</string>
    <string name="button_load_csv">Load CSV</string>
    <string name="button_exit">Exit</string>
    <string name="button_flashing">Flashing</string>
    <string name="button_logging">Logging</string>
    <string name="button_tune_info">Tune Info</string>
    <string name="button_flash_cal">Flash CAL</string>
    <string name="button_flash_full">Flash Full</string>
    <string name="button_get_info">Get Info</string>
    <string name="button_dtc_get">DTC Get</string>
    <string name="button_dtc_clear">DTC Clear</string>
    <string name="button_back">Back</string>
    <string name="button_stop">Stop</string>
    <string name="button_start">Start</string>
    <string name="button_reset">Reset</string>
    <string name="button_save">Save</string>
    <string name="button_set">Set</string>
    <string name="button_utilities">Utilities</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_settings">Settings</string>
    <string name="button_set_adapter_name">Set adapter name</string>
    <string name="button_set_bg_normal_color">Set background normal color</string>
    <string name="button_set_bg_warning_color">Set background warning color</string>
    <string name="button_set_text_color">Set text color</string>
    <string name="button_set_gauge_normal_color">Set gauge normal color</string>
    <string name="button_set_gauge_warn_color">Set gauge warn color</string>
    <string name="button_set_gauge_bg_color">Set gauge background color</string>
    <string name="button_set_gauge_value_color">Set gauge value color</string>
    <string name="button_set_st_error">Set state error color</string>
    <string name="button_set_st_none">Set state none color</string>
    <string name="button_set_st_connecting">Set state connecting color</string>
    <string name="button_set_st_connected">Set state connected color</string>
    <string name="button_set_st_logging">Set state logging color</string>
    <string name="button_set_st_writing">Set state writing color</string>
    <string name="button_set_bt_text">Set button text color</string>
    <string name="button_set_bt_rim">Set button rim color</string>
    <string name="button_set_bt_bg">Set button back ground color</string>
    <!-- Strings used for checkboxes -->
    <string name="check_settings_draw_minmax">Draw min/max?</string>
    <string name="check_settings_draw_grad">Draw graduations?</string>
    <string name="check_settings_invert_cruise">Invert cruise button?</string>
    <string name="check_settings_screen_on">Keep screen on?</string>
    <string name="check_settings_calculate_hp">Calculate HP?</string>
    <string name="check_settings_use_accelerometers">Use Accelerometers? (3E)</string>
    <string name="check_settings_always_portrait">Always use portrait view?</string>
    <string name="check_settings_auto_log">Start logging when idle?</string>
    <string name="check_settings_log_dsg">Log DSG?</string>
    <!-- Strings used for radio buttons -->
    <string name="radio_settings_display_bar_h">Bar horizontal</string>
    <string name="radio_settings_display_bar_v">Bar vertical</string>
    <string name="radio_settings_display_bb">Basic</string>
    <string name="radio_settings_display_round">Round</string>
    <string name="radio_settings_mode_22">22</string>
    <string name="radio_settings_mode_3E">3E</string>
    <string name="radio_settings_mode_downloads">Downloads</string>
    <string name="radio_settings_mode_documents">Documents</string>
    <string name="radio_settings_mode_application">Application</string>
    <!-- Strings used for textview -->
    <string name="textview_settings_log_sub_folder">Sub directory:</string>
    <string name="textview_settings_connection_settings">Connection settings:</string>
    <string name="textview_settings_curb_weight">Curb weight: <xliff:g id="rate">%1$d</xliff:g>kg</string>
    <string name="textview_settings_driver_weight">Driver weight: <xliff:g id="rate">%1$d</xliff:g>kg</string>
    <string name="textview_settings_tire_diameter">Tire diameter: <xliff:g id="rate">%1$f</xliff:g>m</string>
    <string name="textview_settings_drag_coefficient">Drag coefficient: <xliff:g id="rate">%1$f</xliff:g></string>
    <string name="textview_settings_gear_1">Gear 1 ratio:</string>
    <string name="textview_settings_gear_2">Gear 2 ratio:</string>
    <string name="textview_settings_gear_3">Gear 3 ratio:</string>
    <string name="textview_settings_gear_4">Gear 4 ratio:</string>
    <string name="textview_settings_gear_5">Gear 5 ratio:</string>
    <string name="textview_settings_gear_6">Gear 6 ratio:</string>
    <string name="textview_settings_gear_7">Gear 7 ratio:</string>
    <string name="textview_settings_gear_final">Final gear ratio:</string>
    <string name="textview_settings_display_rate">Max display rate: <xliff:g id="rate">%1$d</xliff:g>hz</string>
    <string name="textview_settings_logging_rate">Max logging rate: <xliff:g id="rate">%1$d</xliff:g>hz</string>
    <string name="textview_settings_q_correction">Q correction: <xliff:g id="rate">%1$d</xliff:g>ms</string>
    <string name="textview_settings_mode">Logging mode:</string>
    <string name="textview_settings_display">Gauges:</string>
    <string name="textview_settings_list">Use PID list:</string>
    <string name="textview_settings_directory">Output directory:</string>
    <string name="textview_settings_misc_options">Misc options:</string>
    <string name="textview_settings_log_name">Log name:</string>
    <string name="textview_settings_color_options">Color options:</string>
    <string name="textview_settings_hp_options">Calculated HP options:</string>
    <string name="textview_settings_import_csv">Import PID CSV:</string>
    <string name="textview_settings_import_22_csv">22 CSV</string>
    <string name="textview_settings_import_3E_csv">3E CSV</string>
    <string name="textview_settings_import_DSG_csv">DSG CSV</string>
    <string name="textview_settings_import_22_csv_reset">Reset 22 CSV</string>
    <string name="textview_settings_import_3E_csv_reset">Reset 3E CSV</string>
    <string name="textview_settings_import_DSG_csv_reset">Reset DSG CSV</string>
    <string name="textview_settings_adapter_name">Adapter name:</string>
    <string name="textview_settings_pid_up">↑</string>
    <string name="textview_settings_pid_down">↓</string>
    <string name="textview_settings_pid_name">Name:</string>
    <string name="textview_settings_pid_unit">Unit:</string>
    <string name="textview_settings_pid_address">Address:</string>
    <string name="textview_settings_pid_length">Length:</string>
    <string name="textview_settings_pid_gauge_min">Gauge Min:</string>
    <string name="textview_settings_pid_gauge_max">Gauge Max:</string>
    <string name="textview_settings_pid_warn_min">Warn Min:</string>
    <string name="textview_settings_pid_warn_max">Warn Max:</string>
    <string name="textview_settings_pid_equation">Equation:</string>
    <string name="textview_settings_pid_smoothing">Smoothing:</string>
    <string name="textview_settings_pid_assign_to">Assign To:</string>
    <string name="textview_settings_pid_format">Format:</string>
    <string name="textview_settings_pid_enabled">Enabled</string>
    <string name="textview_settings_pid_tabs">Tabs:</string>
    <string name="textview_color_r">R: <xliff:g id="value">%1$d</xliff:g></string>
    <string name="textview_color_g">G: <xliff:g id="value">%1$d</xliff:g></string>
    <string name="textview_color_b">B: <xliff:g id="value">%1$d</xliff:g></string>
    <string name="textview_fps">fps: <xliff:g id="value">%1$s</xliff:g></string>
    <string name="textview_fps_null">fps: 0</string>
    <!-- Strings used for edit text -->
    <string name="edittext_pid_name"><xliff:g id="value">%1$s</xliff:g></string>
    <!-- Strings used for misc -->
    <string name="bt_status">Bluetooth: </string>
    <string name="bt_connect">Connect</string>
    <string name="bt_disconnect">Disconnect</string>
    <string name="bt_device_name">"BT uart"</string>
    <string name="ble_not_supported">BLE not supported.</string>
    <string name="error_bluetooth_not_supported">BLE not supported error.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>
    <string name="title_error">error <xliff:g id="error_name">%1$s</xliff:g></string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <!-- Strings used for filenames -->
    <string name="filename_pid_csv">PIDList<xliff:g id="log_mode">%1$s</xliff:g>.csv</string>
    <string name="filename_debug_log">debug.log</string>
    <string name="filename_config">config.cfg</string>

</resources>