<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:id="@+id/SettingsLayout">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/button_save"
        app:layout_constraintEnd_toStartOf="@+id/buttonBack"
        app:layout_constraintTop_toTopOf="@+id/buttonBack" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDisplaySize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/textview_settings_displaysize"
                android:textSize="24sp" />

            <SeekBar
                android:id="@+id/seekBarDisplaySize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewUpdateRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/textview_settings_updaterate"
                android:textSize="24sp" />

            <SeekBar
                android:id="@+id/seekBarUpdateRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewPersistDelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/textview_settings_persist_delay"
                android:textSize="24sp" />

            <SeekBar
                android:id="@+id/seekBarPersistDelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewPersistQDelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/textview_settings_persist_q_delay"
                android:textSize="24sp" />

            <SeekBar
                android:id="@+id/seekBarPersistQDelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/textViewOutputDirectory"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/textview_settings_directory"
                    app:autoSizeTextType="uniform"
                    app:lineHeight="60dp" />

                <RadioButton
                    android:id="@+id/radioButtonDownloads"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/radio_settings_mode_downloads" />

                <RadioButton
                    android:id="@+id/radioButtonDocuments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/radio_settings_mode_documents" />

                <RadioButton
                    android:id="@+id/radioButtonApplication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/radio_settings_mode_application" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupMode"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="8dp" >

                <TextView
                    android:id="@+id/textViewLoggingMode"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/textview_settings_mode"
                    app:autoSizeTextType="uniform"
                    app:lineHeight="60dp" />

                <RadioButton
                    android:id="@+id/radioButton3E"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/radio_settings_mode_3E" />

                <RadioButton
                    android:id="@+id/radioButton22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/radio_settings_mode_22" />

            </RadioGroup>

            <TextView
                android:id="@+id/textViewMiscOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_settings_misc_options"
                android:layout_marginTop="8dp"
                android:textSize="32sp" />

            <CheckBox
                android:id="@+id/checkBoxInvertCruise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/check_settings_invert_cruise" />

            <CheckBox
                android:id="@+id/checkBoxScreenOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/check_settings_screen_on" />

            <CheckBox
                android:id="@+id/checkBoxAlwaysPortrait"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/check_settings_always_portrait" />

            <TextView
                android:id="@+id/textViewCalcHPOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_settings_hp_options"
                android:layout_marginTop="8dp"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxCalcHP"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/check_settings_calculate_hp" />

                <CheckBox
                    android:id="@+id/checkBoxUseAccel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/check_settings_use_accelerometers" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewColorOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_settings_color_options"
                android:layout_marginTop="8dp"
                android:textSize="32sp" />

            <Button
                android:id="@+id/buttonSetBGNormalColor"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_set_bg_normal_color"
                android:textColor="#5E35B1" />

            <Button
                android:id="@+id/buttonSetBGWarningColor"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_set_bg_warning_color"
                android:textColor="#5E35B1" />

            <Button
                android:id="@+id/buttonSetTextColor"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_set_text_color"
                android:textColor="#5E35B1" />

            <Button
                android:id="@+id/buttonSetBarNormalColor"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_set_bar_normal_color"
                android:textColor="#5E35B1" />

            <Button
                android:id="@+id/buttonSetBarWarnColor"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_set_bar_warn_color"
                android:textColor="#5E35B1" />

            <Button
                android:id="@+id/buttonSetErrorColor"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_set_st_error"
                android:textColor="#5E35B1" />

            <Button
                android:id="@+id/buttonSetNoneColor"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_set_st_none"
                android:textColor="#5E35B1" />

            <Button
                android:id="@+id/buttonSetConnectingColor"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_set_st_connecting"
                android:textColor="#5E35B1" />

            <Button
                android:id="@+id/buttonSetConnectedColor"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_set_st_connected"
                android:textColor="#5E35B1" />

            <Button
                android:id="@+id/buttonSetLoggingColor"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_set_st_logging"
                android:textColor="#5E35B1" />

            <Button
                android:id="@+id/buttonSetWritingColor"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_set_st_writing"
                android:textColor="#5E35B1" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>