<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.app.simostools.MainFragment"
        android:label="@string/nav_main"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_MainFragment_to_LoggingFragment"
            app:destination="@id/LoggingFragment"/>

        <action
            android:id="@+id/action_MainFragment_to_FlashingFragment"
            app:destination="@id/FlashingFragment"/>

        <action
            android:id="@+id/action_MainFragment_to_PlaybackFragment"
            app:destination="@id/ViewLogFragment"/>

        <action
            android:id="@+id/action_MainFragment_to_UtilitiesFragment"
            app:destination="@id/UtilitiesFragment"/>

        <action
            android:id="@+id/action_MainFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment"/>

    </fragment>

    <fragment
        android:id="@+id/LoggingFragment"
        android:name="com.app.simostools.LoggingMainFragment"
        android:label="@string/nav_logging"
        tools:layout="@layout/fragment_logging_main">

        <action
            android:id="@+id/action_LoggingFragment_to_CockpitFragment"
            app:destination="@id/CockpitFragment"/>

    </fragment>

    <fragment
        android:id="@+id/CockpitFragment"
        android:name="com.app.simostools.CockpitFragment"
        android:label="@string/nav_cockpit"
        tools:layout="@layout/fragment_cockpit">
    </fragment>

    <fragment
        android:id="@+id/FlashingFragment"
        android:name="com.app.simostools.FlashingFragment"
        android:label="@string/nav_flashing"
        tools:layout="@layout/fragment_flashing">
    </fragment>

    <fragment
        android:id="@+id/ViewLogFragment"
        android:name="com.app.simostools.LogViewerFragment"
        android:label="@string/nav_playback"
        tools:layout="@layout/fragment_log_viewer">

        <action
            android:id="@+id/action_PlaybackFragment_to_PlaybackEnabledFragment"
            app:destination="@id/ViewLogEnabledFragment"/>

        <action
            android:id="@+id/action_PlaybackFragment_to_PlaybackTabsFragment"
            app:destination="@id/ViewLogTabsFragment"/>

    </fragment>

    <fragment
        android:id="@+id/ViewLogEnabledFragment"
        android:name="com.app.simostools.LogViewerEnabledFragment"
        android:label="@string/nav_playback_enabled"
        tools:layout="@layout/fragment_log_viewer_enabled">
    </fragment>

    <fragment
        android:id="@+id/ViewLogTabsFragment"
        android:name="com.app.simostools.LogViewerTabsFragment"
        android:label="@string/nav_playback_tabs"
        tools:layout="@layout/fragment_log_viewer_tabs">
    </fragment>

    <fragment
        android:id="@+id/UtilitiesFragment"
        android:name="com.app.simostools.UtilitiesFragment"
        android:label="@string/nav_utilities"
        tools:layout="@layout/fragment_utilities">
    </fragment>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.app.simostools.SettingsMainFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings_main">

        <action
            android:id="@+id/action_SettingsFragment_to_ColorFragment"
            app:destination="@id/ColorFragment"/>

    </fragment>

    <fragment
        android:id="@+id/ColorFragment"
        android:name="com.app.simostools.ColorFragment"
        android:label="@string/nav_color"
        tools:layout="@layout/fragment_color">
    </fragment>

</navigation>